fix volslider width and height on iphone

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -56,6 +56,7 @@ footer{
 .volslider{
 	padding: 10px;
 	margin: 5px;
+	height: 75px;
 }
 
 .progress{
